[project]
name = "ray-pbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.12.8",
  "aiohttp-cors==0.7.0",
  "aiosignal==1.3.2",
  "annotated-types==0.7.0",
  "attrs==25.3.0",
  "brotli==1.1.0",
  "cachetools==5.5.2",
  "certifi==2025.4.26",
  "cffi==1.17.1",
  "charset-normalizer==3.4.2",
  "click==8.2.1",
  "colorama==0.4.6",
  "colorful==0.5.6",
  "contourpy==1.3.2",
  "cryptography==45.0.3",
  "cycler==0.12.1",
  "distlib==0.3.9",
  "filelock==3.18.0",
  "fonttools==4.58.2",
  "frozenlist==1.6.0",
  "fsspec==2025.5.1",
  "google-api-core==2.25.0",
  "google-auth==2.40.3",
  "googleapis-common-protos==1.70.0",
  "grpcio==1.71.0",
  "h2==4.2.0",
  "hpack==4.1.0",
  "hyperframe==6.1.0",
  "idna==3.10",
  "importlib-resources==6.5.2",
  "jinja2==3.1.6",
  "jsonschema==4.24.0",
  "jsonschema-specifications==2025.4.1",
  "kiwisolver==1.4.8",
  "markupsafe==3.0.2",
  "matplotlib==3.10.3",
  "mpmath==1.3.0",
  "msgpack==1.1.0",
  "multidict==6.4.4",
  "networkx==3.5",
  "numpy==2.3.0",
  "nvidia-cublas-cu12==12.6.4.1",
  "nvidia-cuda-cupti-cu12==12.6.80",
  "nvidia-cuda-nvrtc-cu12==12.6.77",
  "nvidia-cuda-runtime-cu12==12.6.77",
  "nvidia-cudnn-cu12==9.5.1.17",
  "nvidia-cufft-cu12==11.3.0.4",
  "nvidia-cufile-cu12==1.11.1.6",
  "nvidia-curand-cu12==10.3.7.77",
  "nvidia-cusolver-cu12==11.7.1.2",
  "nvidia-cusparse-cu12==12.5.4.2",
  "nvidia-cusparselt-cu12==0.6.3",
  "nvidia-nccl-cu12==2.26.2",
  "nvidia-nvjitlink-cu12==12.6.85",
  "nvidia-nvtx-cu12==12.6.77",
  "opencensus==0.11.3",
  "opencensus-context==0.1.3",
  "packaging==25.0",
  "pandas==2.3.0",
  "pillow==11.2.1",
  "pip==25.1.1",
  "pkgutil-resolve-name==1.3.10",
  "platformdirs==4.3.8",
  "prometheus-client==0.22.1",
  "propcache==0.3.1",
  "proto-plus==1.26.1",
  "protobuf==5.29.3",
  "psutil==7.0.0",
  "pyarrow==20.0.0",
  "pyasn1==0.6.1",
  "pyasn1-modules==0.4.2",
  "pycparser==2.22",
  "pydantic==2.11.4",
  "pydantic-core==2.33.2",
  "pyopenssl==25.1.0",
  "pyparsing==3.2.3",
  "pysocks==1.7.1",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "pyu2f==0.1.5",
  "pyyaml==6.0.2",
  "ray==2.46.0",
  "referencing==0.36.2",
  "requests==2.32.3",
  "rpds-py==0.25.1",
  "rsa==4.9.1",
  "setproctitle==1.3.6",
  "setuptools==80.9.0",
  "six==1.17.0",
  "smart-open==7.1.0",
  "sympy==1.14.0",
  "tensorboardx==2.6.2.2",
  "torch==2.7.1",
  "torchvision==0.22.1",
  "triton==3.3.1",
  "typing-extensions==4.14.0",
  "typing-inspection==0.4.1",
  "tzdata==2025.2",
  "urllib3==2.4.0",
  "virtualenv==20.31.2",
  "wheel==0.45.1",
  "wrapt==1.17.2",
  "yarl==1.20.0",
  "zipp==3.23.0",
  "zstandard==0.23.0",
]

[tool.ruff]
select = ["ALL"]
ignore = ["S", "D"]
